fine-tuning for field access: + central new Reference.checkFieldAccessInEarlyConstructionContext()   - invoked from SingleNameReference & FieldReference + new errors: assign super field, assign field with initializer + use enterEarlyConstructionContext() for args of first ctor call, too + fine tuning of use of enablement guards: where to check / report?